tests/cases/match/errors/match-enum-payload-literal-type.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  return match Some(1) {
    Some(true) => 10,
    Some(_) => 1,
    None => 0,
  };
}
